# api/gen/swagger/api/account.swagger.json
@@ -187,6 +187,38 @@
         ]
       }
     },
+    "/v1/getAccountByPhoneOrEmail": {
+      "post": {
+        "operationId": "AccountService_GetAccountByPhoneOrEmail",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/apiAccount"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/apiGetAccountByPhoneOrEmailReq"
+            }
+          }
+        ],
+        "tags": [
+          "AccountService"
+        ]
+      }
+    },
     "/v1/getcaptcha": {
       "post": {
         "operationId": "AccountService_GetCaptcha",
@@ -355,6 +387,14 @@
         "Female"
       ],
       "default": "Unknown"
+    },
+    "apiGetAccountByPhoneOrEmailReq": {
+      "type": "object",
+      "properties": {
+        "username": {
+          "type": "string"
+        }
+      }
     },
     "apiSignInReq": {
       "type": "object",
